
syntax = "proto3";
option java_multiple_files = true;

package helloworld;

service Bank{
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountReply) {}
  rpc Deposit(DepositRequest) returns (DepositReply) {}
  rpc Balance(BalanceRequest) returns (BalanceReply) {}
}

message CreateAccountRequest{
  int32 balance = 1;
}

message CreateAccountReply{
  int32 account_id = 1;
}

message DepositRequest{
  int32 account_id = 1;
  int32 value = 2;
}

message BalanceRequest{
  int32 account_id = 1;
}

message BalanceReply{
  int32 balance = 1;
}

message DepositReply{
  bool success = 1;
}